# tsd-file-api

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  api.py  app-conf.ini  auth.py  chunks.py  config.json  custom-sqlite-for-rhel7.md  docker-compose.yml  fileapi  generalisations-todos  group-based-access-control-on-uploads.md  leoncd@notlands.uio.no  nginx.conf  notes.md  pyproject.toml  release-notes.md  requirements.txt  roadmap.md  scalability-performance.md  setup.cfg  setup.py  t  tornado-example.py
.github/: dependabot.yml
.github/misc/containers/: Dockerfile.test
.github/scripts/: rpm-upload.py
.github/workflows/: audit.yaml  build-containers.yaml  build-rpm-el7.yaml  build-rpm.yaml  dependency-auditing.yaml  pre-commit.yaml  release.yaml  test-suite.yaml  tests.yaml
config/: file-api-config.yaml.example  file-api.service
containers/: Dockerfile  README.md
containers/alpine/: Dockerfile
containers/rpm/: Dockerfile  Gemfile
containers/rpm-el7/: Dockerfile
containers/test/: Dockerfile  entrypoint.sh
doc/: generic-tables.md  postgresql-backend-implementation-notes.sql  resumable-downloads.md  resumable-uploads.md  sqlite-backend-implemention-notes.sql  sync-ideas.md
examples/: README.md  chunked-uploader.py
examples/templates/: index.html
legacy/: flask-api.py
scripts/: chowner  file-api  fileapi  generic-chowner  migrate-tables.sql
tsdfileapi/: acls.py  api.py  auth.py  db.py  dbresumable.py  defaults.py  exc.py  file_renaming.py  parser.py  pgp.py  resumables.py  rmq.py  squril.py  test_file_api.py  test_pgp.py  test_sql_parser.py  tokens.py  utils.py
tsdfileapi/aio/: __init__.py  builtins.py  io.py  os.py  ospath.py  shutil.py
tsdfileapi/config/: config-test-container-postgres.yaml  config-test.yaml  config.yaml  example-file-api-config.yaml  file-api-config.yaml.example  file-api.service
tsdfileapi/data/: example-ns.json  example.csv.aes  example.csv.aes-with-key-and-iv  example.csv.binary-aes-with-key-and-iv  example.csv.gz.aes  example.csv.gz.aes-with-key-and-iv  example.tar  example.tar.aes  example.tar.aes-with-key-and-iv  example.tar.gz.aes  example.tar.gz.aes-with-key-and-iv  resume-file2  så_søt(1).txt
tsdfileapi/data/tsd/p11/export/: blå_fil_3_(v1).txt  this+is+another+file
tsdfileapi/data/tsd/p11/export/data-folder/: secret-data
tsdfileapi/tests/: README.md  chunks.py  private.pem  test_file_api.py  tokens.py
tsdfileapi/tests/.gnupg/: pubring.gpg  random_seed  secring.gpg  trustdb.gpg
