[tool.poetry]
name = "tsdfileapi"
version = "0.0.0"
description = "A REST API for upload and download of files and JSON data."
authors = [
    "Leon du Toit <l.c.d.toit@usit.uio.no>",
    "Eirik Haatveit <haatveit@uio.no>",
    "Milen Kouylekov <milen.kouylekov@usit.uio.no>",
    "Armen Michaeli <armen.michaeli@usit.uio.no>",
]

[tool.poetry.scripts]
tsd-file-api = "tsdfileapi.api:main"

[tool.poetry.dependencies]
python = "^3.8"
jwcrypto = ">=1.4.2"
tornado = ">=6.3.2"
psycopg2 = ">=2.9.3"
libnacl = ">=1.7.1"
pysquril = ">=0.3.6"
tsd-api-client = ">=3.5.2"
SQLAlchemy = ">=1.3.8,<2"
pretty-bad-protocol = ">=3.1.1"
click = ">=8.0"
termcolor = ">=1.1.0"
python-magic = ">=0.4.15"
pika = ">=1.1.0"
pyyaml = ">=5.4"

[tool.poetry.dev-dependencies]
black = "*"
backoff = ">=2.2.1"
requests = ">=2.27.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true

[tool.ruff.lint.isort]
force-single-line = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.20.0"]
build-backend = "poetry_dynamic_versioning.backend"
